--- a/ai-system-analyzer-service/pom.xml
+++ b/ai-system-analyzer-service/pom.xml
@@ -17,7 +17,6 @@
         <maven.compiler.plugin>3.11.0</maven.compiler.plugin>
         <maven-surefire-plugin.version>3.0.0</maven-surefire-plugin.version>
         <spring.boot.version>3.0.5</spring.boot.version>
-        <h2.version>2.1.214</h2.version>
         <mapstruct.version>1.5.3.Final</mapstruct.version>
         <jjwt.version>0.11.5</jjwt.version>
         <lombok.version>1.18.26</lombok.version>
@@ -68,11 +67,6 @@
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <version>${h2.version}</version>
-        </dependency>
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
@@ -139,6 +133,14 @@
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
             <version>${aspectj.version}</version>
+        </dependency>
+
+        <!-- Semantic Web -->
+        <dependency>
+            <groupId>org.apache.jena</groupId>
+            <artifactId>apache-jena-libs</artifactId>
+            <version>5.0.0</version> <!-- or latest -->
+            <type>pom</type>
         </dependency>
     </dependencies>
 
