--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,6 +7,7 @@ RUN npm run build --prod
 
 FROM nginx:stable-alpine AS production-stage
 COPY --from=build-stage /app/dist/frontend/ /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 
 CMD ["nginx", "-g", "daemon off;"]
