--- a/pq-analyzer-service/Dockerfile
+++ b/pq-analyzer-service/Dockerfile
@@ -6,4 +6,6 @@ COPY . /app
 
 RUN pip install --no-cache-dir -r requirements.txt
 
+RUN python -m spacy download en_core_web_sm
+
 CMD ["python", "main.py"]
